<?xml version="1.0" encoding="utf-8"?>
<!-- RecyclerView控件item布局-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_view_book_cover"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:contentDescription="@string/description1"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_book_price"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/book_price" />

            <TextView
                android:id="@+id/text_view_RMB"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/RMB" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>