<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookAddActivity">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/book_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/book_title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:autofillHints="@string/input_title"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/input_title"
        app:layout_constraintStart_toEndOf="@+id/textView_title"
        app:layout_constraintTop_toTopOf="@+id/textView_title" />

    <TextView
        android:id="@+id/textView_price"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/book_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />

    <EditText
        android:id="@+id/book_price"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:autofillHints="@string/input_price"
        android:ems="10"
        android:hint="@string/input_price"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/textView_price"
        app:layout_constraintTop_toTopOf="@+id/textView_price" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_price" />
</androidx.constraintlayout.widget.ConstraintLayout>