<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal"
    tools:ignore="TextSizeCheck">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_done"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/undone"
            tools:ignore="ImageContrastCheck"
            android:contentDescription="done" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:id="@+id/task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/task_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_times"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/task_reward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_reward"
            android:textColor="#2196F3"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>